[package]
name = "api-hyper"
version = "0.1.0"
authors = ["Danilo Pereira <dnp1@users.noreply.github.com>"]

[dependencies]
futures = "0.1.17"
futures-cpupool = "0.1.6"
tokio-core = "0.1.12"
tokio-proto = "0.1.1"
hyper = "0.11.15"
pretty_env_logger = "0.2.0"
configure = "0.1.1"
tokio-postgres = "0.3.0"
